# otus_Cpp7_cmd

./: CMakeLists.txt  Commandes.cpp  Commandes.h  Observe.cpp  Observe.h  README.md  main.cpp
.github/workflows/: c-cpp.yml
